fix(gnome-extension): clamp progress bar width and indicate overflow beyond 100% [useReq]

--- a/src/aibar/aibar/gnome-extension/aibar@aibar.panel/stylesheet.css
+++ b/src/aibar/aibar/gnome-extension/aibar@aibar.panel/stylesheet.css
@@ -303,3 +303,8 @@
     color: #888;
     margin-left: 0;
 }
+
+.aibar-progress-over-limit {
+    border-right: 2px solid black;
+}
+
